# beta-bitebase-app

./: .dockerignore  .env.example  .env.local.example  .env.production  .env.production.template  .env.render  .env.vercel  .eslintrc.json  .gitignore  .gitignore copy  .vercel-trigger  AGENT_ARCHITECTURE_CLARIFICATION.md  AGENT_MIGRATION_COMPLETE.md  ALL_BUILD_FIXES_APPLIED.md  AUTH_THEME_FIX_COMPLETION_SUMMARY.md  BACKEND_DEPLOYMENT_COMPLETE.md  BACKEND_FRONTEND_INTEGRATION_COMPLETE.md  BEDROCK_SETUP.md  BRANCH_CLEANUP_SUMMARY.md  BUILD_ISSUES_RESOLVED.md  CLAUDE.local.md  CLAUDE.md  CLOUDFLARE_DEPLOYMENT_GUIDE.md  CLOUDFLARE_DEPLOYMENT_SUMMARY.md  CLOUDFLARE_SYSTEM_VERIFICATION.md  CUSTOM_DOMAIN_SETUP_GUIDE.md  DASHBOARD_CLEANUP_SUMMARY.md  DATA_PIPELINE_INTEGRATION_GUIDE.md  DEMO_USERS.md  DEPENDENCY_CLEANUP_SUMMARY.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_SIMPLIFIED.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_FINAL.md  DEPLOYMENT_STATUS_UPDATE.md  (+116 more)
agent/: .env.example  README.md  cloudflare-worker.js  package-worker.json  pyproject.toml  restaurant_data_validator.py  run_server.py  server.js  start-servers.sh
agent/bitebase_ai/: __init__.py  agent.py  mapbox_service.py  restaurant_data_validator.py  restaurant_matcher.py  restaurant_validator.py  search.py  web_scraper.py
agent/bitebase_ai/agents/: location_intelligence_agent.py  restaurant_analysis_agent.py
agent/bitebase_ai/core/: __init__.py  data_processor.py
agent/examples/: profile_agent.py
(+770 files in other folders)
